--- a/TaskTracker/TaskTracker/Resources/AppResources.resx
+++ b/TaskTracker/TaskTracker/Resources/AppResources.resx
@@ -117,6 +117,18 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="Accept" xml:space="preserve">
+    <value>Akceptuj</value>
+  </data>
+  <data name="AddNewBoard" xml:space="preserve">
+    <value>Dodaj nową tablicę</value>
+  </data>
+  <data name="BoardName" xml:space="preserve">
+    <value>Nazwa tablicy</value>
+  </data>
+  <data name="Cancel" xml:space="preserve">
+    <value>Anuluj</value>
+  </data>
   <data name="Error" xml:space="preserve">
     <value>Błąd</value>
   </data>
@@ -125,6 +137,9 @@
   </data>
   <data name="Login" xml:space="preserve">
     <value>Login</value>
+  </data>
+  <data name="LoginBtn" xml:space="preserve">
+    <value>Zaloguj</value>
   </data>
   <data name="Mail" xml:space="preserve">
     <value>Mail</value>
