--- a/TaskTracker/TaskTracker/Resources/AppResources.resx
+++ b/TaskTracker/TaskTracker/Resources/AppResources.resx
@@ -150,6 +150,9 @@
   <data name="Mail" xml:space="preserve">
     <value>Mail</value>
   </data>
+  <data name="NameCannotBeEmpty" xml:space="preserve">
+    <value>Nazwa nie może być pusta.</value>
+  </data>
   <data name="Ok" xml:space="preserve">
     <value>OK</value>
   </data>
