some improvements, starting changing mainview

--- a/TaskTracker/TaskTracker/Resources/AppResources.resx
+++ b/TaskTracker/TaskTracker/Resources/AppResources.resx
@@ -168,4 +168,7 @@
   <data name="RestError" xml:space="preserve">
     <value>Rest error</value>
   </data>
+  <data name="Tables" xml:space="preserve">
+    <value>Tablice</value>
+  </data>
 </root>
