--- a/TaskTracker/TaskTracker/Resources/AppResources.resx
+++ b/TaskTracker/TaskTracker/Resources/AppResources.resx
@@ -165,6 +165,9 @@
   <data name="Register" xml:space="preserve">
     <value>Rejestracja</value>
   </data>
+  <data name="RegisterBtn" xml:space="preserve">
+    <value>Zarejestruj</value>
+  </data>
   <data name="RepeatPassword" xml:space="preserve">
     <value>Powtórz hasło</value>
   </data>
