Some fixes, possibility to add task

--- a/TaskTracker/TaskTracker/Resources/AppResources.resx
+++ b/TaskTracker/TaskTracker/Resources/AppResources.resx
@@ -177,4 +177,7 @@
   <data name="Tables" xml:space="preserve">
     <value>Tablice</value>
   </data>
+  <data name="TaskName" xml:space="preserve">
+    <value>Nazwa zadania</value>
+  </data>
 </root>
