First release of BoardManagementPage

--- a/TaskTracker/TaskTracker/Resources/AppResources.resx
+++ b/TaskTracker/TaskTracker/Resources/AppResources.resx
@@ -225,4 +225,7 @@
   <data name="Yes" xml:space="preserve">
     <value>Tak</value>
   </data>
+  <data name="AssignedUsers" xml:space="preserve">
+    <value>Przypisani użytkownicy:</value>
+  </data>
 </root>
